# BeautyGoose

./: .gitignore  README.md
Client/: CMakeLists.txt  Cart.h  ColorConfig.h  CoreData.h  DataCenterCoreData.h  Nav.h  NetClient.cpp  NetClient.h  ServerConfig.json  adminorderlistwidget.cpp  adminorderlistwidget.h  consumercartlistwidget.cpp  consumercartlistwidget.h  consumerdishdetailwidget.cpp  consumerdishdetailwidget.h  consumerdishdetailwindow.h  consumerdishlistwidget.cpp  consumerdishlistwidget.h  consumerorderdetailwidget.cpp  consumerorderdetailwidget.h  consumerorderlistwidget.cpp  consumerorderlistwidget.h  consumeruserinfowidget.cpp  consumeruserinfowidget.h  consumervipwidget.cpp  consumervipwidget.h  datacenter.cpp  datacenter.h  loginbynamewidget.cpp  loginbynamewidget.h  loginbyphone.cpp  loginbyphone.h  mainwidget.cpp  mainwidget.h  merchantdishdetailwidget.cpp  merchantdishdetailwidget.h  merchantdishdetailwindow.h  merchantdisheditwidget.cpp  merchantdisheditwidget.h  merchantdisheditwindow.h  (+16 more)
Client/cache/: account.json
ClientMock/: CMakeLists.txt  Server.h
Server/: docker-compose.yml
Server/Server/: CoreData.h  DatabaseClient.cpp  DatabaseClient.h  HTTPServer.cpp  HTTPServer.h  databaseConfig.json  main.cpp  serverConfig.json
Server/mysql/initdb/: init.sql
Server/nginx/: Dockerfile  sup.conf
Server/presstest/: dishInfo.lua  makefile
Server/redis/conf/: redis.conf
Server/server/: Dockerfile
Server/server/src/: CMakeLists.txt  CoreData.hpp  DBConfig.json  DatabaseClient.cpp  DatabaseClient.hpp  Doxyfile  HTTPServer.cpp  HTTPServer.hpp  RedisClient.cpp  RedisClient.hpp  logger.hpp  main.cpp  makefile  server.conf  serverConfig.json
Server/server/src/controllers/: SharedResources.h  btyGoose_AccountCtrl.cc  btyGoose_AccountCtrl.h  btyGoose_AdminCtrl.cc  btyGoose_AdminCtrl.h  btyGoose_ConsumerCtrl.cc  btyGoose_ConsumerCtrl.h  btyGoose_MerchantCtrl.cc  btyGoose_MerchantCtrl.h  btyGoose_TestCtrl.cc  btyGoose_TestCtrl.h
documents/: .文档指导.md  0调研文档.md  2系统架构设计说明书.md  4模块设计说明书.md  5API接口文档.md  5技术选型报告.md  模块设计说明书.md  系统架构设计说明书.md  调研文档.md  软件需求规格说明书.md
server/: main.cpp  makefile  server  startServer
